--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -112,7 +112,7 @@ html {
 .swiper-slide {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
 }
 
@@ -263,7 +263,7 @@ html {
     background-size: 100% 100%;
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: 100px;
     width: 100%;
     height: 295px;
 }
