--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -1,62 +1,37 @@
-@charset 'utf-8';
-
-/*=========================Reset_start==========================*/
-
-html, body, h1, h2, h3, h4, h5, h6, div, p, dl, dt, dd, ol, ul, li, form, table, th, td, a, img, span, strong, var, em, input, textarea, select, option {
-  margin: 0;
-  padding: 0;
-}
-
 html, body {
-  font-family: 'Microsoft YaHei', '微软雅黑', '黑体', 'Helvetica Neue', '宋体', 'Arail', 'Tabhoma';
-  div, img, input, section, p {
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-  }
-  font-size: 90px;
-  text-align: left;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-html, body div, img, input, section, p {
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
+  height: 100%
 }
 
 body {
-  font-size: 100%;
+  font: normal 16px/200% tohoma, helvetica, "Microsoft yahei";
+  color: #000
 }
 
-ul, ol {
-  list-style: none;
+body, p, ul, li, ol, h1, h2, h3, h4, h5, h6, dl, dt, dd, form, iframe {
+  margin: 0;
+  padding: 0
+}
+
+ul, li, ol {
+  list-style: none outside none
 }
 
 img {
-  border: 0;
+  border: 0 none;
+  vertical-align: top;
+  width: 100%
 }
 
-input, select, textarea {
-  outline: 0;
+input, select {
+  vertical-align: middle
 }
 
-textarea {
-  resize: none;
+pre {
+  white-space: normal
 }
 
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-th, strong, var, em {
-  font-weight: normal;
-  font-style: normal;
-}
-
-a {
-  text-decoration: none;
+.edge {
+  margin: 0 auto
 }
 
 
@@ -73,11 +48,7 @@ body, html {
 
 /*==========================Start===========================*/
 
-.swiper-container,
-.swiper-wrapper{
-  height:100%;
-  overflow: hidden;
-}
+
 
 .swiper-slide {
   position: relative;
